Fix parallelepiped button edge alignment

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -4,6 +4,8 @@
   height: 82px;
   background-color: #fee97d;
   border: 2.5px solid #0c090e;
+  border-bottom-right-radius: 2px;
+  border-top-left-radius: 2px;
   font-family: $font-heading;
   font-size: 23px;
   font-weight: bold;
@@ -28,20 +30,24 @@
   // Top face
   &::before {
     bottom: 100%;
-    left: -2.5px;
-    width: calc(100% + 2 * 2.5px);
+    left: -3.5px;
+    width: calc(100% + 3.5px);
     height: 15px;
     transform-origin: bottom left;
     transform: skewX(-45deg);
+    border-right: 1.5px solid #0c090e;
+    border-bottom-left-radius: 2px;
   }
 
   // Right face
   &::after {
-    top: -2.5px;
+    top: 0;
     left: 100%;
     width: 15px;
-    height: calc(100% + 2 * 2.5px);
+    height: calc(100% + 3.5px);
     transform-origin: top left;
     transform: skewY(-45deg);
+    border-top: 1.5px solid #0c090e;
+    border-bottom-left-radius: 2px;
   }
 }
